# VisualizationSandbox

./: README.md
apl/: README.md
apl/SandBox/: Makefile  advanced_string_tags_demo.cpp  amain.cpp  bdemo_1.cpp  bdemo_2.cpp  bdemo_3.cpp  bdemo_31.cpp
apl/src_dynamic/: README.md  VisBase.cpp  VisBase.h  VisBase.hpp  VisRegistry.h  Vis_forward.h  amain.cpp  bdemo.cpp  bpl.h  field.h
apl/src_dynamic_auto/: Makefile  README.md  VisBase.cpp  VisBase.h  VisRegistry.h  Vis_forward.h  amain.cpp  bdemo.cpp  bpl.h  field.h
apl/src_fluent/: Makefile  README.md  VisBase.h  VisRegistry.h  Vis_forward.h  amain.cpp  bdemo.cpp  bpl.h  field.h  particle.h
apl/src_static/: Makefile  README.md  VisBase.h  VisRegistry.h  amain.cpp  bdemo.cpp  particle.h
bpl/: Makefile  readme.md
bpl/more_basic/: amain_no_exceptions.cpp  debug_test.cpp  test_internal_error_handling.cpp  test_mismatch.cpp  test_simplified_registry.cpp  test_templated_containers.cpp  test_typed_find.cpp
bpl/src/: Makefile  VisBase.h  VisBase.hpp  amain.cpp  bpl.h  field.h  field.hpp  manager.h  particle.h  particle.hpp  test_field_particle_retrieval.cpp  test_print_simple.cpp
bpl/src_/: Makefile  VIS_forward.h  VISnotes.hpp  VisBase.cpp  VisBase.h  VisBase.hpp  VisBase_TypeConfig.h  amain.cpp  bpl.h  demo_one.cpp  demo_two.cpp  easy_auto_cast.h  field.h  particle.h  (+1 more)
catalyst_mini_apps/: CMakeLists.txt  README.md  cmake.sh  compile.sh  run_explicit.sh  run_uniform.sh
catalyst_mini_apps/src/mini_apps/: explicit_mini.cpp  pipeline_trivial.py  pipeline_trivial_ext.py  uniform_mini.cpp
dog_failed/: Makefile  dog.cpp
(+26 files in other folders)
